# drorata.github.io

./: .drone.yml  .gitignore  .gitmodules  Makefile  Pipfile  README.md  README.org  Taskfile.yaml  _config.yml  archives.html  authors.html  categories.html  environment.yml  index.html  index.md  index2.html  index3.html  index4.html  pelicanconf.py  publishconf.py  pyproject.toml  tags.html
_posts/: 2015-05-29-test.org  2015-05-30-test.org  2015-05-31-first-post.org
author/: dror-atariah.html  dror-atariah2.html  dror-atariah3.html  dror-atariah4.html
category/: ds.html  general.html  howto.html  ml.html  stats.html
content/: AI-in-Data-Science-presented-by-RecdoTech.md  MLEM_review.md  avg-means+counts-with-groupby.md  benchmarking_columns_operation.md  candy-analysis.md  compare_z_and_chi_square_tests.md  custom_enums_and_tests.md  divide-dy-n-1.md  docker-useful-commands.md  ess-age-country-net-usage.md  expose_prediction_model_as_api.md  first-post.md  getting-started-with-atom.md  group-by-date-as-column.md  hashing-dataframes-problem.md  hypothesis-test-t-test.md  installing-spark-on-macOS.md  jupyter-notebook-sample.md  learnings-about-fitting-transforming-w-sklearn.md  linear-regression-minimal-example.md  logging-from-different-places.md  minimal-parasitic-numbers.md  mssql-from-mac.md  mushroom-ml.md  order-in-dataframe-and-groupby.md  oreilly-data-driven-remarks.md  pillars-of-reproducible-work.md  protective-questions-4-data-scientist.md  scale-to-dask-cluster.md  setting-new-computer.md  testing-visdom-in-docker.md  thoughts-about-ds.md
tag/: it.html  (+42 more)
(+68 files in other folders)
